# PeriCheck-Core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
buildscripts/mongoose/: CMakeLists.txt
buildscripts/uSockets/: CMakeLists.txt
buildscripts/uWebSockets_Interface/: CMakeLists.txt
unit_tests/: CMakeLists.txt  uWebSocketsClient.cpp  uWebSocketsHelloWorld.cpp
