cmake_minimum_required(VERSION 3.10)

project(uSockets LANGUAGES C)

option(USE_LIBUV "Use libuv." OFF)
option(LIBUV_INCLUDE_DIRS "libuv include dirs" OFF)
option(LIBUV_LIBRARIES "libuv libraries" OFF)
option(USE_OPENSSL "Use OpenSSL." OFF)
option(OPENSSL_INCLUDE_DIRS "openssl include dirs" OFF)
option(OPENSSL_CRYPTO_LIBRARIES "openssl crypto libraries" OFF)
option(OPENSSL_SSL_LIBRARIES "openssl ssl libraries" OFF)
file(GLOB_RECURSE PROJECT_HEADERS src/*.h src/*.hpp)
file(GLOB_RECURSE PROJECT_SOURCES src/*.c src/*.cpp)

if(USE_LIBUV)
  list(APPEND PROJECT_COMPILE_DEFINITIONS LIBUS_USE_LIBUV)
endif ()

if(USE_OPENSSL)
  list(APPEND PROJECT_COMPILE_DEFINITIONS LIBUS_USE_OPENSSL)
else  ()
  list(APPEND PROJECT_COMPILE_DEFINITIONS LIBUS_NO_SSL)
endif ()

if ("${LIBUV_LIBRARIES}" STREQUAL "" OR "${LIBUV_INCLUDE_DIRS}" STREQUAL "")
    message(FATAL_ERROR "You must set LIBUV_LIBRARIES and LIBUV_INCLUDE_DIRS when USE_LIBUV is turned on.")
else()
    if (DEFINED LIBUV_INCLUDE_DIRS)
		include_directories(${LIBUV_INCLUDE_DIRS})
		set(CMAKE_REQUIRED_INCLUDES ${CMAKE_REQUIRED_INCLUDES} ${LIBUV_INCLUDE_DIRS})
	endif()
endif()

if ("${OPENSSL_CRYPTO_LIBRARIES}" STREQUAL "" OR "${OPENSSL_SSL_LIBRARIES}" STREQUAL "" OR "${OPENSSL_INCLUDE_DIRS}" STREQUAL "")
    #message(FATAL_ERROR "You must set OPENSSL_LIBRARIES and OPENSSL_INCLUDE_DIRS when USE_OPENSSL is turned on.")
else()
    if (DEFINED LIBUV_INCLUDE_DIRS)
		include_directories(${OPENSSL_INCLUDE_DIRS})
		set(CMAKE_REQUIRED_INCLUDES ${CMAKE_REQUIRED_INCLUDES} ${OPENSSL_INCLUDE_DIRS})
	endif()
endif()


set (PROJECT_FILES ${PROJECT_HEADERS} ${PROJECT_SOURCES})

add_library(${PROJECT_NAME} ${PROJECT_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC 
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBUV_LIBRARIES})
if ("${OPENSSL_CRYPTO_LIBRARIES}" STREQUAL "" OR "${OPENSSL_SSL_LIBRARIES}" STREQUAL "" OR "${OPENSSL_INCLUDE_DIRS}" STREQUAL "")
  target_link_libraries(${PROJECT_NAME} PUBLIC ${OPENSSL_CRYPTO_LIBRARIES})
  target_link_libraries(${PROJECT_NAME} PUBLIC ${OPENSSL_SSL_LIBRARIES})
endif()

install(TARGETS ${PROJECT_NAME}
    EXPORT uSocketsTargets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} # 静态库：lib/
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} # 动态库：lib/
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} # Windows 动态库运行时：bin/
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} # 头文件根目录：include/
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
    FILES_MATCHING PATTERN "*.h" 
    PATTERN "*.c" EXCLUDE       
    PATTERN "cmake" EXCLUDE      
)